--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,6 +1,6 @@
 .footer {
     min-height: 100px;
-    background: #e5e5e5;
+    background: #212121;
     position: relative;
   }
   
@@ -10,7 +10,7 @@
     left: 0;
     right: 0;
     padding: 3px;
-    background: #b8b8b8;
+    background: #222;
     text-align: center;
   }
   
